Remove unnecessary --enable-native-access=ALL-UNNAMED flag
FFM API is finalized since Java 22. Since the project targets Java 25,
this flag is no longer needed anywhere. Removed from editor setup docs
and Gradle JVM args.